@@ -80,6 +80,7 @@
 
 #include "x11basic.h"
 #include "xbasic.h"
+#include "memory.h"
 #include "type.h"
 #include "parser.h"
 #include "svariablen.h"
