@@ -34,6 +34,7 @@
 #include "x11basic.h"
 #include "variablen.h"
 #include "xbasic.h"
+#include "memory.h"
 #include "type.h"
 
 #include "kommandos.h"
