@@ -92,11 +92,6 @@ int everytime=0,alarmpc=-1,alarmpctype=0;
 int stack[STACKSIZE];
 
 
-#if SIZEOF_VOID_P == 8
-void *pointerbase=NULL;
-#endif
-
-
 /* fuer die Dateiverwaltung     */
 FILEINFO filenr[ANZFILENR];
 static int *linetable=NULL;   /* for correctly count splitted lines*/
