@@ -9,3 +9,5 @@ Release notes for Version 1.25 (Sept 2016 -- 2017)
 - added bluetooth support (linux)
 - improved USB functions (linux)
 - make use of fftw library when available
+- improved memory handling in 64bit versions
+
